# Shell

./: .42sh_history  42SH  42sh  CMakeLists.txt  Doxyfile  Makefile  Makefile.am  Makefile.in  Makefilecmake  README  TODO  autogen.sh  config.status  configure  exemple  file  file.ps  outfile.ps  output.gv  toto.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: 42sh.1  Doxyfile  doxyfile.conf
doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.md5
doc/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8c.tex  main_8c__incl.md5  refman.tex
lexer/: a.out  lexer.c  main.c
src/: .main.c.swp  42sh  Makefile  a.out  main.c  tool.c
src/.deps/: 42sh-main.Po  main.Po
src/Parser/: do_group.c  else_node.c  if_node.c  rule_compound_list.c  until_node.c  while_node.c
src/built-in/: .echo.c.swp  ariexp.c  built-in.h  cd.c  echo.c  exit.c  history.c  shopt.c  source.c  stack.c  stack.h
src/etc/: 42shrc
src/file/: history.c  tool.c  tool_file.c  variable.txt
src/include/: shell.h
src/lexer/: .case_node.c.swp  .foo_token.c.swp  .if_node.c.swp  .pipe_node.c.swp  .rule_case_clause.c.swp  .rule_command.c.swp  .rule_compound_list.c.swp  .word_node.c.swp  a.out  and_node.c  bang_node.c  case_node.c  dgreat_node.c  dless_node.c  dlessdash_node.c  do_group.c  element.c  if_node.c  (+28 more)
tests/: cmd.yml  conftest.py  execpython.sh  f1  fé  loadtest.sh  option.sh  output.gv  test_command.yml  testsuit.py  §
testsuit/: conftest.py  loadtest.sh
(+116 files in other folders)
